# py_programming

./: .gitignore  README.md  anti_lexiographic.py  eratosthene.py  pyproject.toml  razmen,py  razmen.py
.github/workflows/: main.yml
src/06oct25/: complexity.md  queen_permutation_v1.py  queen_permutation_v2.py  queen_permutation_v3.py
src/09oct25/: pep8_code.py
src/17oct25/: heap_sort.py  test_heap_sort.py
src/18sep25/: extended_euclid.py
src/27sep25/: bubble_sort.py
