[project]
name = "py-programming"
version = "0.1.0"
description = "Homeworks"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = []

[tool.ruff.lint]
extend-select = [
    "F",        # Правила Pyflakes
    "W",        # Предупреждения PyCodeStyle
    "E",        # Ошибки PyCodeStyle
    "I",        # Правильно сортировать импорты
    "N",        # Нейминг
    "UP",       # Предупреждать, если что-то можно изменить из-за новых версий Python
    "C4",       # Ловить неправильное использование comprehensions, dict, list и т.д.
    "FA",       # Применять from __future__ import annotations
    "ISC",      # Хорошее использование конкатенации строк
    "ICN",      # Использовать общие соглашения об импорте
    "RET",      # Хорошие практики возврата
    "SIM",      # Общие правила упрощения
]
